# fg-core

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .venv  .vercelignore  ALIGNMENT_AUDIT.md  AUDIT_REPORT.md  AUDIT_TRACKER.md  AUTHZ_COMPLIANCE_PLAN.md  BLUEPRINT_AUDIT.md  BLUEPRINT_CONTROL_PLANE_VNEXT.md  BLUEPRINT_STAGED.md  CLAUDE.md  CLIENT_READINESS.md  CODEX.md  CODEX_FA_FORENSIC_TEST_PROMPT.md  CONTEXT_SNAPSHOT.md  CONTRACT.md  DRIFT_LEDGER.md  Dockerfile  ENTERPRISE_PLAN.md  FA_AUDIT_TRACKER.md  FOUNDER_DIRECTIVE.md  GOTCHAS.md  H14_RBAC_GAP_REPORT.md  HARDENING_PLAN.md  MOAT_STRATEGY.md  Makefile  POST_PT_AUDIT.md  PR_FIX_LOG.md  README.md  README_MVP.md  ROADMAP.md  SPINE_INVARIANTS.md  STATUS.md  SYSTEM.md  (+29 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.vercel/: project.json
admin_gateway/: Dockerfile  README.md  __init__.py  alembic.ini  asgi.py  audit.py  auth.py  logging_config.py  main.py  requirements-dev.txt  requirements.txt
agent/: .env.example  Dockerfile  README.md  SECURITY.md  agent_main.py  core_client.py  docker-compose.yml  main.py  requirements.txt  windows-requirements.txt  windows_service.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/services/: intel.py
backend/tests/: _harness.py  conftest.py  test_decision_diff_persistence.py  test_feed_live_presentation.py  test_feed_live_timestamp.py  test_health.py  test_intel.py  test_missions.py  test_stats_endpoint.py
(+3146 files in other folders)
